<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="@dimen/edit_page_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/product_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_product_name"
                    android:textSize="@dimen/edit_page_textSize"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/product_name_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/input_hint_product_name"
                    android:textSize="@dimen/edit_page_textSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/product_price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_product_price"
                    android:textSize="@dimen/edit_page_textSize"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/product_price_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/input_hint_product_price"
                    android:textSize="@dimen/edit_page_textSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/product_quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_product_quantity"
                    android:textSize="@dimen/edit_page_textSize"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/product_quantity_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/input_hint_product_quantity"
                    android:textSize="@dimen/edit_page_textSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/supplier_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_supplier_name"
                    android:textSize="@dimen/edit_page_textSize"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/supplier_name_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/input_hint_supplier_name"
                    android:textSize="@dimen/edit_page_textSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/supplier_phone_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_supplier_phone"
                    android:textSize="@dimen/edit_page_textSize"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/supplier_phone_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/input_hint_supplier_phone"
                    android:textSize="@dimen/edit_page_textSize" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>